# 4n6mount

./: .gitignore  Cargo.toml  README.md  deny.toml  mkdocs.yml  release-plz.toml
.cargo/: config.toml
.github/workflows/: ci.yml  mount-smoke.yml  release-plz.yml
docs/: PRD.md  index.md  privacy.md  terms.md
docs/decisions/: 0001-ad1-mounting.md  0002-aff4-mounting.md  0003-memory-dump-mounting.md  0004-cow-by-default.md  0004-single-root-cow-default.md  0005-universal-cow-overlay.md  0006-adopt-forensic-vfs-mount.md  0007-lazy-derived-artifacts.md  0008-deleted-in-place-orphans.md  0010-unified-multi-volume-mount-layout.md
docs/plans/: 2026-04-03-cross-platform-binary-design.md  2026-05-12-hardening-design.md  2026-05-12-hardening-plan.md  2026-06-25-memory-dump-mounting.md  2026-06-25-memory-phase2-sys-walkers.md  memory-mounting-roadmap.md
examples/: mkdump.rs
fuzz/: Cargo.toml
fuzz/corpus/detect_filesystem/: seed
fuzz/fuzz_targets/: detect_filesystem.rs  filter_parse.rs  inode_map_roundtrip.rs  session_deserialize.rs
paper/: deletion-sok.md  references.md
paper/experiment/: .gitignore  RESULTS.md  manifest.py  measure.py  predictions.py  run_all.sh  run_fs.sh  score.py
paper/experiment/results/: manifest_apfs.json  manifest_exfat.json  manifest_fat.json  manifest_hfsplus.json  measured_apfs.json  measured_exfat.json  measured_fat.json  measured_hfsplus.json  score_results.json
scripts/smoke/: gen-fixtures.sh  manifest.tsv  smoke.ps1  smoke.sh
src/: archive_tree.rs  detect.rs  engine_fs.rs  filter.rs  fs_ad1.rs  fs_aff4.rs  fs_apfs.rs  fs_exfat.rs  fs_ext4.rs  fs_hfsplus.rs  fs_iso.rs  fs_ntfs.rs  fs_raw.rs  fs_sevenz.rs  fs_tar.rs  fs_zip.rs  fuse_unix.rs  fuse_windows.rs  fusefs.rs  inode_map.rs  lib.rs  main.rs  marking.rs  session.rs  types.rs  win_map.rs
src/mem/: inode.rs  memoryfs.rs  mod.rs
supply-chain/: config.toml
tests/: e2e_archive_read.rs  e2e_image_read.rs  e2e_multipartition.rs  peel_open.rs
tests/data/: README.md  ad1.ad1  aff4-logical.aff4  apfs.img  crash.dmp  exfat.img  hfsplus.img
