[package]
name = "forensic-mount"
version = "0.5.0"
edition = "2021"
rust-version = "1.88"
description = "Mount forensic disk images, archives, and memory dumps as a filesystem on Linux, macOS, and Windows — ext4/NTFS/exFAT/HFS+/APFS/ISO, EWF/VMDK containers, zip/7z/tar, LiME/AVML/crash dumps"
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/4n6mount"
homepage = "https://github.com/SecurityRonin/4n6mount"
documentation = "https://docs.rs/forensic-mount"
readme = "README.md"
keywords = ["forensics", "fuse", "dfir", "filesystem", "memory-forensics"]
categories = ["filesystem", "command-line-utilities"]
# Test fixtures, CI smoke harness, and workflows are not needed by consumers.
exclude = ["tests/data/*", "scripts/smoke/*", ".github/*", "fuzz/*"]

[[bin]]
name = "4n6mount"
path = "src/main.rs"

# Synthetic crash-dump generator for the memory mount-smoke; needs the memory
# feature's memf-format builders, so it is skipped under default features.
[[example]]
name = "mkdump"
required-features = ["memory"]

[features]
# FS/archive backends forward to forensic-vfs-engine, which owns the readers and
# the format on-ramp. Container formats (EWF/VMDK/AFF4-disk/QCOW2/VHD/VHDX/DMG)
# and logical collections (AD1/AFF4-Logical/DAR) are handled inside the engine's
# `open()` via disk-forensic, so they are no longer standalone features here.
default = ["ext4", "iso", "tarball", "zip", "sevenz", "ntfs", "hfsplus", "exfat", "apfs"]
ext4 = ["forensic-vfs-engine/ext4"]
iso = ["forensic-vfs-engine/iso"]
ntfs = ["forensic-vfs-engine/ntfs"]
hfsplus = ["forensic-vfs-engine/hfsplus"]
exfat = ["forensic-vfs-engine/exfat"]
apfs = ["forensic-vfs-engine/apfs"]
tarball = ["forensic-vfs-engine/tarball"]
zip = ["forensic-vfs-engine/zip"]
sevenz = ["forensic-vfs-engine/sevenz"]
memory = ["dep:memf-format", "dep:memf-core", "dep:memf-session", "dep:memf-symbols", "dep:memf-windows", "dep:memf-linux"]

[dependencies]
clap = { version = "4", features = ["derive"] }
# The forensic VFS engine: the `ForensicFs` trait, the shared Fs* types, every
# FS/archive backend, and the partition-aware `open()` entry point.
forensic-vfs-engine = { version = "0.1", path = "../forensic-vfs-engine", default-features = false }
memf-format = { version = "0.2", path = "../memory-forensic/crates/memf-format", optional = true }
memf-core = { version = "0.2", path = "../memory-forensic/crates/memf-core", optional = true }
memf-session = { version = "0.3", path = "../memory-forensic/crates/memf-session", optional = true }
memf-symbols = { version = "0.2", path = "../memory-forensic/crates/memf-symbols", optional = true }
memf-windows = { version = "0.3", path = "../memory-forensic/crates/memf-windows", optional = true }
memf-linux = { version = "0.3", path = "../memory-forensic/crates/memf-linux", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
md-5 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
libc = "0.2"

# FUSE backend is Unix-only (libfuse / macFUSE). On Windows the mount layer uses
# Dokan instead (see the windows target table below).
[target.'cfg(unix)'.dependencies]
fuser = "0.15"

[target.'cfg(windows)'.dependencies]
# Dokan (MIT) Rust bindings for Windows user-mode filesystem mounting. The
# Dokany runtime (dual LGPL/MIT) is installed separately, like FUSE on Unix, so
# only MIT code enters the dependency graph.
dokan = "0.3"
# Must match the widestring version dokan re-exports in its trait signatures
# (dokan 0.3.1 uses widestring 0.4); a 1.x here is a distinct, incompatible type.
widestring = "0.4"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
too_many_lines = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
