[package]
name = "forensic-mount"
version = "0.5.0"
edition = "2021"
rust-version = "1.88"
description = "Mount forensic disk images, archives, and memory dumps as a filesystem on Linux, macOS, and Windows — ext4/NTFS/exFAT/HFS+/APFS/ISO, EWF/VMDK containers, zip/7z/tar, LiME/AVML/crash dumps"
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/4n6mount"
homepage = "https://github.com/SecurityRonin/4n6mount"
documentation = "https://docs.rs/forensic-mount"
readme = "README.md"
keywords = ["forensics", "fuse", "dfir", "filesystem", "memory-forensics"]
categories = ["filesystem", "command-line-utilities"]
# Test fixtures, CI smoke harness, and workflows are not needed by consumers.
exclude = ["tests/data/*", "scripts/smoke/*", ".github/*", "fuzz/*"]

[[bin]]
name = "4n6mount"
path = "src/main.rs"

# Synthetic crash-dump generator for the memory mount-smoke; needs the memory
# feature's memf-format builders, so it is skipped under default features.
[[example]]
name = "mkdump"
required-features = ["memory"]

[features]
# The forensic-vfs engine is batteries-included: every filesystem/container
# reader is compiled in, so there are no per-format features to forward. Only
# the memory-dump mount (memf) stays opt-in — it pulls a large analysis stack.
default = []
memory = ["dep:memf-format", "dep:memf-core", "dep:memf-session", "dep:memf-symbols", "dep:memf-windows", "dep:memf-linux", "dep:forensic-vfs-resolver"]

[dependencies]
clap = { version = "4", features = ["derive"] }
# The forensic VFS engine: the partition-aware `Vfs::open()` entry point that
# detects the container/volume/filesystem stack and mounts a `dyn FileSystem`.
forensic-vfs-engine = { version = "0.1", path = "../forensic-vfs-engine" }
# The `FileSystem` navigation contract + its `Fs*` value types. Registry version
# (not a path dep) so it unifies with the copy the engine links — a path dep
# would compile a second, incompatible `DynFs`/`FileId`.
forensic-vfs = "0.5"
# The generic layer resolver's `resolve_to_source()` (ADR 0011) — peels a wrapped
# memory dump (memory.zip / memory.dd.gz / dump.7z) down to its raw byte edge
# before memf reads it. Only the memory mount needs it; already in the graph via
# the engine, so this is a zero-cost direct handle. Registry version so it unifies
# with the engine's copy (both resolve to the published forensic-vfs-resolver 0.2).
forensic-vfs-resolver = { version = "0.2", optional = true }
# Archive-layer reader: transparently peels a gzip/bzip2/xz compression wrapper
# (evidence.dd.gz -> dd) before the engine opens the inner image. The `vfs`
# feature exposes `ArchiveOpener` (the forensic-vfs ArchiveOpen impl) so the
# memory path can build an archive-only `Openers` for resolve_to_source.
archive-core = { version = "0.1.0", path = "../archive-forensic/core", features = ["vfs"] }
tempfile = "3"
memf-format = { version = "0.3", path = "../memory-forensic/crates/memf-format", optional = true }
memf-core = { version = "0.2", path = "../memory-forensic/crates/memf-core", optional = true }
memf-session = { version = "0.3", path = "../memory-forensic/crates/memf-session", optional = true }
memf-symbols = { version = "0.2", path = "../memory-forensic/crates/memf-symbols", optional = true }
memf-windows = { version = "0.3", path = "../memory-forensic/crates/memf-windows", optional = true }
memf-linux = { version = "0.3", path = "../memory-forensic/crates/memf-linux", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
md-5 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
libc = "0.2"

# FUSE backend is Unix-only (libfuse / macFUSE). On Windows the mount layer uses
# Dokan instead (see the windows target table below).
[dev-dependencies]
# The peel_open integration test gzips a fixture to prove the archive-layer peel.
flate2 = "1"
# The e2e_archive_read test drives the SAME archive reader the mount peels
# evidence with (`archive_core::Archive`) against a real catalog .zip.
archive-core = { version = "0.1.0", path = "../archive-forensic/core" }
# The ADR-0011 memory-unarchive test wraps a synthetic dump in a real .zip to
# prove the resolve_to_source -> adapt -> open_source chain reads the same pages.
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(unix)'.dependencies]
fuser = "0.15"

[target.'cfg(windows)'.dependencies]
# Dokan (MIT) Rust bindings for Windows user-mode filesystem mounting. The
# Dokany runtime (dual LGPL/MIT) is installed separately, like FUSE on Unix, so
# only MIT code enters the dependency graph.
dokan = "0.3"
# Must match the widestring version dokan re-exports in its trait signatures
# (dokan 0.3.1 uses widestring 0.4); a 1.x here is a distinct, incompatible type.
widestring = "0.4"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
too_many_lines = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
