[package]
name = "forensic-mount-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[workspace]

[[bin]]
name = "detect_filesystem"
path = "fuzz_targets/detect_filesystem.rs"
test = false
doc = false

[[bin]]
name = "session_deserialize"
path = "fuzz_targets/session_deserialize.rs"
test = false
doc = false

[[bin]]
name = "filter_parse"
path = "fuzz_targets/filter_parse.rs"
test = false
doc = false

[[bin]]
name = "inode_map_roundtrip"
path = "fuzz_targets/inode_map_roundtrip.rs"
test = false
doc = false

[dependencies]
libfuzzer-sys = "0.4"
forensic-mount = { path = "..", default-features = false }
serde_json = "1"
tempfile = "3"
